
***
Ver: 1.1.1

Changed:
    Download in progress changed to 'proper' download bar and that one
    shows actual download progress.


***
Ver: 1.1.0

Changed:
    Improved download process. Downloading won't freeze GUI.
    GUI changes.

Added:
    Option to change download folder.
    Information button.
    Downloading in progress bar (to be replaced by proper progress bar
    in future release).
    Added Splash Screen.


***
Ver: 1.0.0

Created YouTube Downloader.